GitVersion1/objects/Potential_History__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Created this custom setting to display field tracking history details</description>
    <fields>
        <fullName>Backend_field_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backend field check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name_to_display__c</fullName>
        <label>Field Name to display</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header_Column__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Header Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Potential History</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Header_Column__c</columns>
        <columns>Field_Name_to_display__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
</CustomObject>